--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,6 @@
 {
 	"files.associations": {
 		"*.embeddedhtml": "html",
-		"deque": "cpp",
-		"forward_list": "cpp",
-		"list": "cpp",
-		"string": "cpp",
-		"vector": "cpp",
-		"valarray": "cpp",
-		"new": "cpp",
-		"ostream": "cpp",
-		"chrono": "cpp",
-		"random": "cpp",
-		"limits": "cpp"
+		"new": "cpp"
 	}
 }
