--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
 	"files.associations": {
 		"*.embeddedhtml": "html",
 		"iostream": "cpp",
-		"ostream": "cpp"
+		"ostream": "cpp",
+		"typeindex": "cpp",
+		"typeinfo": "cpp"
 	}
 }
